# Junction-Diagram-Automation-Suite

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  JunctionBuilder.def  README.md
docs/html/: _cable_8cpp.html  _cable_8h.html  _cable_8h.js  _cable_8h_source.html  _device_8cpp.html  _device_8h.html  _device_8h_source.html  _junction_builder_8cpp.html  _junction_builder_8cpp.js  _junction_builder_8h.html  _junction_builder_8h.js  _junction_builder_8h_source.html  annotated.html  annotated_dup.js  class_cable-members.html  class_cable.html  class_cable.js  class_device-members.html  class_device.html  class_device.js  classes.html  dir_1ac2fdee2362a08fc0358dcef45d782c.html  dir_1ac2fdee2362a08fc0358dcef45d782c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  helpers_8cpp.html  helpers_8cpp.js  helpers_8h.html  (+14 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  (+13 more)
docs/latex/: _cable_8cpp.tex  _cable_8h.tex  _cable_8h_source.tex  _device_8cpp.tex  _device_8h.tex  _device_8h_source.tex  _junction_builder_8cpp.tex  _junction_builder_8h.tex  _junction_builder_8h_source.tex  annotated.tex  class_cable.tex  class_device.tex  files.tex  helpers_8cpp.tex  helpers_8h.tex  helpers_8h_source.tex  index.tex  main_8cpp.tex  main_8h.tex  main_8h_source.tex  refman.tex  resource_8h.tex  resource_8h_source.tex  struct_dialog_result.tex
include/: Cable.h  Device.h  JunctionBuilder.h  helpers.h  main.h
resource/: dialog.rc  resource.h
src/: Cable.cpp  Device.cpp  JunctionBuilder.cpp  helpers.cpp  main.cpp
